--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "from",
+  "name": "utilise.from",
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "mocha-lcov-reporter": "0.0.2"
   },
   "dependencies": {
-    "datum": "git+https://github.com/utilise/datum.git",
-    "key": "git+https://github.com/utilise/key.git"
+    "utilise.datum": "*",
+    "utilise.key": "*"
   }
 }
